--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "NODE_ENV=development nodemon index.js",
+    "build": "NODE_ENV=production babel ./src -d ./dist -w",
+    "lint": "eslint ./src/*.js*",
+    "test":"mocha --compilers js:babel-register"
   },
   "keywords": [
     "nodejs",
@@ -22,7 +25,10 @@
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
+    "babel-eslint": "8.2.1",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1"
+    "babel-preset-stage-0": "6.24.1",
+    "eslint": "4.17.0",
+    "mocha": "5.0.0"
   }
 }
