--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development nodemon index.js",
+    "start": "PORT=1111 NODE_ENV=development nodemon index.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
     "lint": "eslint ./src/*.js*",
     "test":"mocha --compilers js:babel-register"
@@ -14,6 +14,9 @@
     "nodejs",
     "mongodb"
   ],
+  "engines": {
+    "node": "6.10.1"
+  },
   "author": "Vinay",
   "license": "ISC",
   "dependencies": {
