--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "Node api's connecting to mongo db",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build": "NODE_ENV=production babel ./src -d ./dist -w",
-    "lint": "eslint ./src/*.js*",
-    "test":"mocha --compilers js:babel-register"
+    "start": "node index.js"
   },
   "keywords": [
     "nodejs",
