--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development nodemon app.js",
+    "start": "PORT=8000 NODE_ENV=development nodemon app.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
     "lint": "eslint ./src/*.js*",
     "test":"mocha --compilers js:babel-register"
