--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "node-mongo-app",
   "version": "1.0.0",
   "description": "Node api's connecting to mongo db",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=8000 NODE_ENV=development nodemon app.js",
+    "start": "PORT=8000 NODE_ENV=development nodemon index.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
     "lint": "eslint ./src/*.js*",
     "test":"mocha --compilers js:babel-register"
