--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Node api's connecting to mongo db",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register",
     "start": "PORT=8000 NODE_ENV=production nodemon index.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
-    "lint": "eslint ./src/*.js*",
-    "test":"mocha --compilers js:babel-register"
+    "lint": "eslint ./src/*.js*"
   },
   "keywords": [
     "nodejs",
@@ -23,7 +22,9 @@
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
     "express": "4.16.2",
-    "mongoose": "5.0.0"
+    "mongoose": "5.0.0",
+    "multer": "1.3.0",
+    "socket.io": "2.0.4"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
