--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register",
-    "start": "PORT=8000 NODE_ENV=production nodemon index.js",
+    "start": "PORT=8000 NODE_ENV=production node app.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
     "lint": "eslint ./src/*.js*"
   },
