--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register",
-    "start": "PORT=8000 NODE_ENV=production node app.js",
+    "start": "PORT=8000 NODE_ENV=development nodemon index.js",
     "build": "NODE_ENV=production babel ./src -d ./dist -w",
-    "lint": "eslint ./src/*.js*"
+    "lint": "eslint ./src/**/*.js*"
   },
   "keywords": [
     "nodejs",
@@ -21,9 +21,11 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
+    "cookie-parser": "1.4.3",
     "express": "4.16.2",
+    "express-session": "1.15.6",
+    "jsonwebtoken": "8.3.0",
     "mongoose": "5.0.0",
-    "multer": "1.3.0",
     "socket.io": "2.0.4"
   },
   "devDependencies": {
@@ -32,7 +34,12 @@
     "babel-eslint": "8.2.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "eslint": "4.17.0",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0",
     "mocha": "5.0.0"
   }
 }
